--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="api.js"></script>
   </head>
   <body>
-    <script src="webcamjs/webcam.js"></script>
+    <script src="webcam.js"></script>
     <div id="my_camera" style="width:320px; height:240px;"></div>
     <div id="my_emotion"></div>
     <script language="JavaScript">
